# realtime-fraud360-azure-lakehouse

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: databricks-bundle-dev.yml
configs/dev/: streaming_config.yaml
databricks/bronze/: 01_eventhub_to_bronze.py
databricks/pipelines/: fraud360_bronze_silver_pipeline.py
databricks/silver/: 02_bronze_to_silver.py
databricks/snowflake/: 03_silver_to_snowflake.py  03_silver_to_snowflake_stream.py
dbt_fraud360/: dbt_project.yml
dbt_fraud360/models/gold/: customer_risk_summary.sql
dbt_fraud360/models/sources/: src_silver.yml
producer/: producer.py
resources/: fraud360_jobs.yml  fraud360_pipeline.yml
